improved header renaming, added some new methods to condense things

--- a/Process_from_Converted.ipynb
+++ b/Process_from_Converted.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "a4390b86-cef7-4d98-a2ed-037a17faaf6b",
    "metadata": {},
    "outputs": [],
@@ -185,64 +185,123 @@
     "            self.site_info[site]['header_metadat'] = metadat.copy()\n",
     "        return\n",
     "    \n",
+    "    def make_empty(self, fts, site):\n",
+    "            \"\"\"make an empty fast file to indicate missing data. Creates a dataframe with two entries in the given time period with the proper header, populated by nans.\n",
+    "            \n",
+    "            Example:\n",
+    "            TIMESTAMP             | Ux_CSAT3B_NF3 | Uy_CSAT3B_NF3 | ... | DIAG_LI7500_NF3\n",
+    "            ------------------------------------------------------------------------------\n",
+    "            2021-05-05 12:00:00.1 | NaN           | NaN           | ... | NaN\n",
+    "            2021-05-05 12:00:00.2 | NaN           | NaN           | ... | NaN\n",
+    "            \"\"\"\n",
+    "            return (pd.DataFrame({'TIMESTAMP':pd.date_range(start=fts + pd.Timedelta(f'{self.acq_period} mSec'), freq=\"100ms\", periods=2)})\n",
+    "                    .reindex(columns=self.site_info[site]['final_header'], fill_value = np.nan)\n",
+    "                    .set_index('TIMESTAMP'))\n",
+    "    \n",
     "    def reorder_headers(self, site, fts, df):\n",
     "        \"\"\"Data headers change over time as the site evolves. This method will rearrange the dataframe to fit into a standard-order header, given the site name and date. All such metadata is input manually. Refer to self.site_info[site]['header_metadat'] for help crafting these.\n",
     "        \n",
     "        steps:\n",
-    "            1. Identify the site\n",
-    "            2. Identify the date\n",
-    "            3. Given the date and the site, save the missing columns, as well as the order to rearrange the columns\n",
+    "            1. Identify the date/site\n",
+    "            3. Record the missing columns and the renaming scheme\n",
     "            4. Add the missing columns\n",
-    "            5. Rearrange the columns\n",
-    "            6. Rename the columns to the standard header\"\"\"\n",
+    "            5. Apply renaming scheme\n",
+    "            6. Alphabetize columns\"\"\"\n",
     "        \n",
-    "        # identify the site\n",
     "        if site == 'BB-NF17':\n",
-    "            # identify the date\n",
     "            if fts.date() < pd.to_datetime(\"2019-05-19\"):\n",
-    "                # identify which columns in the final standardized header are missing from the raw data header\n",
     "                cols_to_add = [\"P_LI7500_NF17\", \"DIAG_CSAT3_NF17\", \"DIAG_CSAT3_NF7\"]\n",
-    "                # identify how we should re-order these columns to fit into the new dataset. The new_order[i] gives the index of the old header that will be moved to index i\n",
-    "                new_order = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 13, 14, 15, 12]\n",
+    "                renaming_dict = {\n",
+    "                     'Ux_CSAT3_17m':\"Ux_CSAT3_NF17\",\n",
+    "                     'Uy_CSAT3_17m':\"Uy_CSAT3_NF17\",\n",
+    "                     'Uz_CSAT3_17m':\"Uz_CSAT3_NF17\",\n",
+    "                     'Ts_CSAT3_17m':\"Ts_CSAT3_NF17\",\n",
+    "                     'Ux_CSAT3_7m':\"Ux_CSAT3_NF7\",\n",
+    "                     'Uy_CSAT3_7m':\"Uy_CSAT3_NF7\",\n",
+    "                     'Uz_CSAT3_7m':\"Uz_CSAT3_NF7\",\n",
+    "                     'Ts_CSAT3_7m':\"Ts_CSAT3_NF7\",\n",
+    "                     'rho_c_LI7500':\"rho_c_LI7500_NF17\",\n",
+    "                     'rho_v_LI7500':\"rho_v_LI7500_NF17\",\n",
+    "                     'DIAG_LI7500':\"DIAG_LI7500_NF17\"\n",
+    "                }\n",
+    "                \n",
+    "            # differences: P_LI7500 was added\n",
     "            elif fts.date() > pd.to_datetime(\"2019-05-19\"):\n",
     "                cols_to_add = [\"DIAG_CSAT3_NF17\", \"DIAG_CSAT3_NF7\"]\n",
-    "                new_order = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 14, 15, 13]\n",
+    "                renaming_dict = {\n",
+    "                     'Ux_CSAT3_17m':\"Ux_CSAT3_NF17\",\n",
+    "                     'Uy_CSAT3_17m':\"Uy_CSAT3_NF17\",\n",
+    "                     'Uz_CSAT3_17m':\"Uz_CSAT3_NF17\",\n",
+    "                     'Ts_CSAT3_17m':\"Ts_CSAT3_NF17\",\n",
+    "                     'Ux_CSAT3_7m':\"Ux_CSAT3_NF7\",\n",
+    "                     'Uy_CSAT3_7m':\"Uy_CSAT3_NF7\",\n",
+    "                     'Uz_CSAT3_7m':\"Uz_CSAT3_NF7\",\n",
+    "                     'Ts_CSAT3_7m':\"Ts_CSAT3_NF7\",\n",
+    "                     'rho_c_LI7500':\"rho_c_LI7500_NF17\",\n",
+    "                     'rho_v_LI7500':\"rho_v_LI7500_NF17\",\n",
+    "                     \"P_LI7500\":\"P_LI7500_NF17\"\n",
+    "                     'DIAG_LI7500':\"DIAG_LI7500_NF17\",\n",
+    "                }\n",
+    "                \n",
     "            # if the file ever overlaps with a \"maintenance\" day, omit that whole day\n",
     "            elif fts.date() == pd.to_datetime(\"2019-05-19\"):\n",
-    "                cols_to_add = []\n",
-    "                df = pd.DataFrame(np.full((1, len(self.site_info[site]['final_header'])), np.nan), \n",
-    "                                  columns=self.site_info[site]['final_header'])\n",
-    "                df['TIMESTAMP'] = fts + pd.Timedelta(f'{self.acq_period} mSec')\n",
-    "                df.set_index('TIMESTAMP', inplace=True)\n",
+    "                df = self.make_empty(fts, site)\n",
     "                return df\n",
     "                \n",
     "        elif site == \"BB-NF3\":\n",
     "            if fts.date() < pd.to_datetime(\"2019-05-19\"):\n",
     "                cols_to_add = [\"P_LI7500_NF3\"]\n",
-    "                new_order = [0, 1, 2, 3, 4, 5, 6, 7, 10, 8, 9]\n",
+    "                renaming_dict = {\n",
+    "                     'Ux_CSAT3B':\"Ux_CSAT3B_NF3\",\n",
+    "                     'Uy_CSAT3B':\"Uy_CSAT3B_NF3\",\n",
+    "                     'Uz_CSAT3B':\"Uz_CSAT3B_NF3\",\n",
+    "                     'Ts_CSAT3B':\"Ts_CSAT3B_NF3\",\n",
+    "                     'rho_c_LI7500':\"rho_c_LI7500_NF3\",\n",
+    "                     'rho_v_LI7500':\"rho_v_LI7500_NF3\",\n",
+    "                     'DIAG_CSAT3B':\"DIAG_CSAT3B_NF3\",\n",
+    "                     'DIAG_LI7500':\"DIAG_LI7500_NF3\"\n",
+    "                }\n",
+    "            \n",
+    "            # differences: diag_csat3b removed, p_li7500 added\n",
     "            elif fts.date() > pd.to_datetime(\"2019-05-19\"):\n",
     "                cols_to_add = [\"DIAG_CSAT3B_NF3\"]\n",
-    "                new_order = [0, 1, 2, 3, 4, 5, 6, 7, 8, 10, 9]\n",
+    "                renaming_dict = {\n",
+    "                     'Ux_CSAT3B':\"Ux_CSAT3B_NF3\",\n",
+    "                     'Uy_CSAT3B':\"Uy_CSAT3B_NF3\",\n",
+    "                     'Uz_CSAT3B':\"Uz_CSAT3B_NF3\",\n",
+    "                     'Ts_CSAT3B':\"Ts_CSAT3B_NF3\",\n",
+    "                     'rho_c_LI7500':\"rho_c_LI7500_NF3\",\n",
+    "                     'rho_v_LI7500':\"rho_v_LI7500_NF3\",\n",
+    "                     'P_LI7500':'P_LI7500_NF3',\n",
+    "                     'DIAG_LI7500':\"DIAG_LI7500_NF3\"\n",
+    "                }\n",
     "            \n",
     "            # if the file ever overlaps with a \"maintenance\" day, omit the whole day\n",
     "            elif fts.date() == pd.to_datetime(\"2019-05-19\"):\n",
-    "                cols_to_add = []\n",
-    "                df = pd.DataFrame(np.full((1, len(self.site_info[site]['final_header'])), np.nan), \n",
-    "                                          columns=self.site_info[site]['final_header'])\n",
-    "                df['TIMESTAMP'] = fts + pd.Timedelta(f'{self.acq_period} mSec')\n",
-    "                df.set_index('TIMESTAMP', inplace=True)\n",
+    "                df = self.make_empty(fts, site)\n",
     "                return df\n",
     "        \n",
-    "        # once the cols_to_add and the new_order have been identified, appply them to the data\n",
+    "        new_order = self.site_info[site]['final_header']\n",
+    "        # apply new column names/order to the data\n",
     "        # first, add columns\n",
-    "        for col in cols_to_add:\n",
-    "                    df[col] = np.nan\n",
-    "        # then, re-order those columns\n",
-    "        df = df.iloc[:, new_order]\n",
-    "        # finally, rename those columns using the standardized header names.\n",
-    "        df.columns = self.site_info[site]['final_header']\n",
+    "        df = (df\n",
+    "              .reindex(columns=list(df.columns) + cols_to_add, fill_value=np.nan)  # add missing cols\n",
+    "              .rename(columns=renaming_dict)  # rename to final values\n",
+    "             )[new_order]  # re-order\n",
     "        \n",
     "        return df\n",
+    "    \n",
+    "    def read_file(self, fn, site, ts):\n",
+    "        \"\"\"read in a single raw file and return a formatted version\"\"\"\n",
+    "        # read in the file. Rows 0, 2, and 3 contain boring metadata. After rows 0, 2, 3 are removed, the new row 0 is the true header\n",
+    "        rawdat = pd.read_csv(fn, sep=',', header=[0], skiprows=[0, 2, 3], na_values = ['NAN', '-4400906', '-9999', '-7999'])\n",
+    "        rawdat['TIMESTAMP'] = pd.to_datetime(rawdat['TIMESTAMP'], format='%Y-%m-%d %H:%M:%S.%f')\n",
+    "        # standardize the header\n",
+    "        rawdat = self.reorder_headers(site, ts, rawdat)\n",
+    "        rawdat.set_index('TIMESTAMP', inplace=True)\n",
+    "        rawdat = rawdat.loc[:, rawdat.columns != 'RECORD']\n",
+    "        \n",
+    "        return rawdat\n",
     "    \n",
     "    def standardize_fast_files(self):\n",
     "        \"\"\"reads in raw fast files, and combines/standardizes them to be continuous.\"\"\"\n",
@@ -261,11 +320,10 @@
     "        # initialize the summary dataframe\n",
     "        summary_data, summary_header = self.summary_template()\n",
     "        \n",
-    "        # we'll be popping file names off of fns and file_tss, so we'll create temporary copies of them first to avoid destroying the originals\n",
+    "        # we'll be popping file names off of fns and file_tss, so let's create temporary copies of them first to avoid destroying the originals\n",
     "        for site in self.site_info:\n",
-    "            self.site_info[site]['fns_temp'], self.site_info[site]['file_tss_temp'] = self.site_info[site]['fns'].copy(), self.site_info[site]['file_tss'].copy()\n",
-    "        \n",
-    "        # start processing files by desired start timestamp:\n",
+    "            self.site_info[site]['fns_temp'] = self.site_info[site]['fns'].copy()\n",
+    "            self.site_info[site]['file_tss_temp'] = self.site_info[site]['file_tss'].copy()\n",
     "        \n",
     "        # loop through OUTPUT file timestamps/names\n",
     "        for idfts, dfts in enumerate(tqdm(self.desired_file_tss)):\n",
@@ -275,31 +333,31 @@
     "            dat = pd.DataFrame(desired_time_index, columns=['TIMESTAMP'])\n",
     "            dat.set_index('TIMESTAMP', inplace=True)\n",
     "            \n",
-    "            # get the TOA5 metadata stored in the raw file\n",
+    "            # generate output file name:\n",
+    "            # yyyy-mm-dd hh:MM --> yyyy_mm_dd_hh:MM\n",
     "            dfts_str = re.sub('-| ', '_', str(dfts))\n",
+    "            # yyyy_mm_dd_hh:MM --> yyyy_mm_dd_hhMM\n",
     "            dfts_str = re.sub(':', '', dfts_str)[:-2]\n",
     "            desired_fn = self.out_path / f'{dfts_str}.csv'\n",
     "            \n",
     "            # now loop through each site at this desired timestamp. \n",
     "            for site in self.site_info:\n",
     "                \n",
-    "                # find qualified files for this timestamp. Whenever a valid file is found, pop it off the temp list.\n",
+    "                # find qualified files for this timestamp. Whenever a valid file is found, pop it off the temp list. There shouldn't be more than one valid file per timestamp because of how the cardconvert process works, but sometimes there is, so we need to deal with that.\n",
     "                next_file_ts = dfts + pd.Timedelta(f'{self.file_length} Min')\n",
     "                next_fns, next_file_tss = [], []\n",
     "                try:\n",
     "                    while self.site_info[site]['file_tss_temp'][0] < next_file_ts:\n",
     "                        next_fns.append(self.site_info[site]['fns_temp'].pop(0))\n",
     "                        next_file_tss.append(self.site_info[site]['file_tss_temp'].pop(0))\n",
+    "                # when the temp lists empty, we'll get \n",
     "                except IndexError as err:\n",
     "                    pass\n",
     "                \n",
     "                # concatenate the qualified files along the time axis\n",
     "                # if no valid files are found, just make a null dataframe\n",
     "                if next_fns == []:\n",
-    "                    rawdat = pd.DataFrame(np.full((1, len(self.site_info[site]['final_header'])), np.nan), \n",
-    "                                          columns=self.site_info[site]['final_header'])\n",
-    "                    rawdat['TIMESTAMP'] = desired_time_index[0]\n",
-    "                    rawdat.set_index('TIMESTAMP', inplace=True)\n",
+    "                    rawdat = self.make_empty(dfts, site)\n",
     "                    rawdat = rawdat.loc[:, rawdat.columns != 'RECORD']\n",
     "                    \n",
     "                # otherwise, proceed as normal\n",
@@ -307,19 +365,14 @@
     "                    # loop through all valid files for this timestamp. Convert them to the proper format and apply any calibrations/corrections that are needed.\n",
     "                    for i, fn, ts in zip(range(len(next_fns)), next_fns, next_file_tss):\n",
     "                        if i == 0:\n",
-    "                            rawdat = pd.read_csv(fn, sep=',', header=[0], skiprows=[0, 2, 3], na_values = ['NAN', '-4400906'])\n",
-    "                            rawdat['TIMESTAMP'] = pd.to_datetime(rawdat['TIMESTAMP'], format='%Y-%m-%d %H:%M:%S.%f')\n",
-    "                            rawdat = self.reorder_headers(site, ts, rawdat)\n",
-    "                            rawdat.set_index('TIMESTAMP', inplace=True)\n",
-    "                            rawdat = rawdat.loc[:, rawdat.columns != 'RECORD']\n",
+    "                            rawdat = self.read_file(fn, ts, site)\n",
     "                        else:\n",
-    "                            rawdat_tmp = pd.read_csv(fn, sep=',', header=[0], skiprows=[0, 2, 3], na_values = ['NAN', '-4400906'])\n",
-    "                            rawdat_tmp['TIMESTAMP'] = pd.to_datetime(rawdat_tmp['TIMESTAMP'], format='%Y-%m-%d %H:%M:%S.%f')\n",
-    "                            rawdat = self.reorder_headers(site, ts, rawdat)\n",
-    "                            rawdat_tmp.set_index('TIMESTAMP', inplace=True)\n",
-    "                            rawdat = rawdat.loc[:, rawdat.columns != 'RECORD']\n",
+    "                            rawdat_tmp = self.read_file(fn, ts, site)\n",
     "                            rawdat = pd.concat([rawdat, rawdat_tmp])\n",
-    "                            with open(fn) as f: self.site_info[site]['rawfile_metadata'].loc[ts] = f.readline()[1:-2].split('\",\"') + [fn, desired_fn]\n",
+    "                        \n",
+    "                        # record metadata\n",
+    "                        with open(fn) as f: \n",
+    "                            self.site_info[site]['rawfile_metadata'].loc[ts] = f.readline()[1:-2].split('\",\"') + [fn, desired_fn]\n",
     "\n",
     "                # now that we have a complete, standardized output file for this site, merge it onto the master dataframe (column-wise) to add to all the other sites\n",
     "                dat = dat.merge(rawdat, how='outer', left_index=True, right_index=True, sort=True)\n",
