--- a/Process_from_Converted.ipynb
+++ b/Process_from_Converted.ipynb
@@ -53,14 +53,16 @@
     "        \n",
     "        # sheet names in the metadata excel file\n",
     "        header_sheets = {\n",
-    "                \"BB-NF17\": \"NF 17m 10Hz Code\",\n",
-    "                \"BB-NF3\": \"NF 3m 10Hz Code\"\n",
+    "                \"NF17\": \"NF 17m 10Hz Code\",\n",
+    "                \"NF3\": \"NF 3m 10Hz Code\"\n",
     "        }\n",
     "        \n",
     "        # the final headers to use, grouped by site name.\n",
     "        final_headers = {\n",
-    "            \"BB-NF17\": [\"TIMESTAMP\", \"RECORD\", \"Ux_CSAT3_NF17\", \"Uy_CSAT3_NF17\", \"Uz_CSAT3_NF17\", \"Ts_CSAT3_NF17\", \"Ux_CSAT3_NF7\", \"Uy_CSAT3_NF7\", \"Uz_CSAT3_NF7\", \"Ts_CSAT3_NF7\", \"rho_c_LI7500_NF17\", \"rho_v_LI7500_NF17\", \"P_LI7500_NF17\", \"DIAG_CSAT3_NF17\", \"DIAG_CSAT3_NF7\", \"DIAG_LI7500_NF17\"],\n",
-    "            \"BB-NF3\": [\"TIMESTAMP\", \"RECORD\", \"Ux_CSAT3B_NF3\", \"Uy_CSAT3B_NF3\", \"Uz_CSAT3B_NF3\", \"Ts_CSAT3B_NF3\", \"rho_c_LI7500_NF3\", \"rho_v_LI7500_NF3\", \"P_LI7500_NF3\", \"DIAG_CSAT3_NF3\", \"DIAG_LI7500_NF3\"]\n",
+    "            \"NF17\": [\"TIMESTAMP\", \"RECORD\", \"Ux_CSAT3_NF17\", \"Uy_CSAT3_NF17\", \"Uz_CSAT3_NF17\", \"Ts_CSAT3_NF17\", \"Ux_CSAT3_NF7\", \"Uy_CSAT3_NF7\", \"Uz_CSAT3_NF7\", \"Ts_CSAT3_NF7\", \"rho_c_LI7500_NF17\", \"rho_v_LI7500_NF17\", \"P_LI7500_NF17\", \"DIAG_CSAT3_NF17\", 'flag_CSAT3_NF17', \"DIAG_CSAT3_NF7\", 'flag_CSAT3_NF7', \"DIAG_LI7500_NF17\"],\n",
+    "            \"NF3\": [\"TIMESTAMP\", \"RECORD\", \"Ux_CSAT3B_NF3\", \"Uy_CSAT3B_NF3\", \"Uz_CSAT3B_NF3\", \"Ts_CSAT3B_NF3\", \"rho_c_LI7500_NF3\", \"rho_v_LI7500_NF3\", \"P_LI7500_NF3\", \"DIAG_CSAT3_NF3\", 'flag_CSAT3B_NF3', \"DIAG_LI7500_NF3\"],\n",
+    "            \"SF4\": [\"TIMESTAMP\", 'RECORD', 'Ux_SON_SF4', 'Uy_SON_SF4', 'Uz_SON_SF4', 'Ts_SON_SF4', 'rho_c_IRGA_SF4', 'rho_v_IRGA_SF4', 'P_IRGA_SF4', 'DIAG_SON_SF4', 'flag_SON_SF4', 'DIAG_IRGA_SF4', 'flag_IRGA_SF4']\n",
+    "            \tUx (m/s), Uy (m/s), Uz (m/s), Ts (C), sonic diagnostic (arb), CO2*, H2O*, gas diagnostic (arb), ambient temperature (C), ambient pressure (kPa), CO2 signal strength (arb), H2O signal strength (arb)\n",
     "        }\n",
     "        \n",
     "        # all site-specific metadata is stored here\n",
@@ -93,6 +95,27 @@
     "        if not self.out_path.exists():\n",
     "            self.out_path.mkdir(parents=True)\n",
     "        return\n",
+    "    \n",
+    "    def process_diagnostics(df, site):\n",
+    "        \"\"\"search a dataframe for diagnostic columns and turn them into boolean flags\"\"\"\n",
+    "        # how to process diagnostic bits for each instrument\n",
+    "        diag_dict = {\n",
+    "            'CSAT3': {f'flag_CSAT3_{site}': lambda x: int(bool(x >> 12))},\n",
+    "            'CSAT3B': {f'flag_CSAT3B_{site}': lambda x: int(bool(x & 0b101011111))},\n",
+    "            'IRGA': {f'flag_IRGA_{site}': lambda x: int(bool(x))},\n",
+    "            'SON': {f'flag_SON_{site}' : lambda x: int(bool(x))}\n",
+    "        }\n",
+    "        \n",
+    "        # search all columns in dataframe\n",
+    "        for colname in df.columns:\n",
+    "            # find the instrument name\n",
+    "            instr = re.search(\"DIAG_CSAT3_|DIAG_CSAT3B|DIAG_IRGA|DIAG_SON\", colname)[0][5:]\n",
+    "            if instr == 'CSAT3_': \n",
+    "                instr = 'CSAT3'\n",
+    "            # write diagnostic column\n",
+    "            df = df.assign(**diag_dict[instr])\n",
+    "            \n",
+    "            return df  \n",
     "    \n",
     "    def get_timestamp_from_fn(self, fn):\n",
     "        \"\"\"given a raw, converted file, this will extract the timestamp given in its name. Files are expected to be of the format TOA5*Hz*_yyyy_mm_dd_hh_MM.dat\"\"\"\n",
@@ -208,7 +231,7 @@
     "            5. Apply renaming scheme\n",
     "            6. Alphabetize columns\"\"\"\n",
     "        \n",
-    "        if site == 'BB-NF17':\n",
+    "        if site == 'NF17':\n",
     "            if fts.date() < pd.to_datetime(\"2019-05-19\"):\n",
     "                cols_to_add = [\"P_LI7500_NF17\", \"DIAG_CSAT3_NF17\", \"DIAG_CSAT3_NF7\"]\n",
     "                renaming_dict = {\n",
@@ -248,7 +271,7 @@
     "                df = self.make_empty(fts, site)\n",
     "                return df\n",
     "                \n",
-    "        elif site == \"BB-NF3\":\n",
+    "        elif site == \"NF3\":\n",
     "            if fts.date() < pd.to_datetime(\"2019-05-19\"):\n",
     "                cols_to_add = [\"P_LI7500_NF3\"]\n",
     "                renaming_dict = {\n",
@@ -291,12 +314,15 @@
     "        \n",
     "        return df\n",
     "    \n",
-    "    def read_file(self, fn, site, ts):\n",
+    "    def process_file(self, fn, site, ts):\n",
     "        \"\"\"read in a single raw file and return a formatted version\"\"\"\n",
     "        # read in the file. Rows 0, 2, and 3 contain boring metadata. After rows 0, 2, 3 are removed, the new row 0 is the true header\n",
     "        rawdat = pd.read_csv(fn, sep=',', header=[0], skiprows=[0, 2, 3], na_values = ['NAN', '-4400906', '-9999', '-7999'])\n",
     "        rawdat['TIMESTAMP'] = pd.to_datetime(rawdat['TIMESTAMP'], format='%Y-%m-%d %H:%M:%S.%f')\n",
-    "        # standardize the header\n",
+    "        \n",
+    "        # add diagnostic flags\n",
+    "        rawdat = self.process_diagnostics(rawdat, site)\n",
+    "        # standardize header\n",
     "        rawdat = self.reorder_headers(site, ts, rawdat)\n",
     "        rawdat.set_index('TIMESTAMP', inplace=True)\n",
     "        rawdat = rawdat.loc[:, rawdat.columns != 'RECORD']\n",
@@ -358,6 +384,7 @@
     "                # if no valid files are found, just make a null dataframe\n",
     "                if next_fns == []:\n",
     "                    rawdat = self.make_empty(dfts, site)\n",
+    "                    rawdat = self.\n",
     "                    rawdat = rawdat.loc[:, rawdat.columns != 'RECORD']\n",
     "                    \n",
     "                # otherwise, proceed as normal\n",
@@ -365,9 +392,9 @@
     "                    # loop through all valid files for this timestamp. Convert them to the proper format and apply any calibrations/corrections that are needed.\n",
     "                    for i, fn, ts in zip(range(len(next_fns)), next_fns, next_file_tss):\n",
     "                        if i == 0:\n",
-    "                            rawdat = self.read_file(fn, ts, site)\n",
+    "                            rawdat = self.process_file(fn, ts, site)\n",
     "                        else:\n",
-    "                            rawdat_tmp = self.read_file(fn, ts, site)\n",
+    "                            rawdat_tmp = self.process_file(fn, ts, site)\n",
     "                            rawdat = pd.concat([rawdat, rawdat_tmp])\n",
     "                        \n",
     "                        # record metadata\n",
