--- a/Process_from_Converted.ipynb
+++ b/Process_from_Converted.ipynb
@@ -390,8 +390,8 @@
     "            fn, \n",
     "            parse_options=csv.ParseOptions(delimiter=','),\n",
     "            convert_options=csv.ConvertOptions(null_values=['NAN', '-4400906', '-9999']),\n",
-    "            read_options=csv.ReadOptions(skip_rows=1, skip_rows_after_names=2)\n",
-    "        ).to_pandas()\n",
+    "            read_options=csv.ReadOptions(use_threads=True, skip_rows=1, skip_rows_after_names=2)\n",
+    "        ).to_pandas(use_threads=True)\n",
     "        \n",
     "#         rawdat = pd.read_csv(fn, sep=',', header=[0], skiprows=[0, 2, 3], na_values = ['NAN', '-4400906', '-9999', '-7999'])\n",
     "        self.tlog.click('in')\n",
@@ -489,11 +489,11 @@
     "            self.tlog.click('out')\n",
     "            # it seems that using np.savetxt instead is actually much faster\n",
     "            pa_table = csv.write_csv(\n",
-    "                pa.Table.from_pandas(dat, preserve_index=False, nthreads=2), \n",
+    "                pa.Table.from_pandas(dat, preserve_index=False, nthreads=4), \n",
     "                desired_fn\n",
     "            )\n",
     "#             np.savetxt(desired_fn, dat.values, fmt='%.7f', header=','.join(dat.columns), delimiter=',')\n",
-    "            #dat.to_csv(desired_fn, sep=',', na_rep='NAN', index=False, index_label=False, line_terminator='\\n')\n",
+    "#             dat.to_csv(desired_fn, sep=',', na_rep='NAN', index=False, index_label=False, line_terminator='\\n')\n",
     "            self.tlog.click('out')\n",
     "            # write summary stats for analysis and QA/QC\n",
     "            with warnings.catch_warnings():\n",
