--- a/Process_from_Converted.ipynb
+++ b/Process_from_Converted.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 408,
+   "execution_count": 1,
    "id": "a4390b86-cef7-4d98-a2ed-037a17faaf6b",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,8 @@
     "import matplotlib.pyplot as plt\n",
     "from tqdm import trange, tqdm\n",
     "from scipy import stats\n",
-    "import pyarrow as pa"
+    "import pyarrow as pa\n",
+    "import pyarrow.csv as csv"
    ]
   },
   {
@@ -149,28 +150,38 @@
     "        \n",
     "        return\n",
     "    \n",
-    "    \n",
-    "    def process_diagnostics(self, df, site):\n",
-    "        \"\"\"search a dataframe for diagnostic columns and turn them into boolean flags\"\"\"\n",
-    "        # how to process diagnostic bits for each instrument\n",
-    "        diag_dict = {\n",
-    "            'CSAT3': {f'flag_CSAT3_{site}': lambda x: int(bool(x >> 12))},\n",
-    "            'CSAT3B': {f'flag_CSAT3B_{site}': lambda x: int(bool(x & 0b101011111))},\n",
-    "            'IRGA': {f'flag_IRGA_{site}': lambda x: int(bool(x))},\n",
-    "            'SON': {f'flag_SON_{site}' : lambda x: int(bool(x))}\n",
-    "        }\n",
+    "    def metadata_template(self):\n",
+    "        \"\"\"create a blank template to store raw TOA5 file metadata in. This can be referenced later for debugging purposes\"\"\"\n",
     "        \n",
-    "        # search all columns in dataframe\n",
-    "        for colname in df.columns:\n",
-    "            # find the instrument name\n",
-    "            instr = re.search(\"DIAG_CSAT3_|DIAG_CSAT3B|DIAG_IRGA|DIAG_SON\", colname)\n",
-    "            if instr: \n",
-    "                instr = instr[0][5:]\n",
-    "                if instr == 'CSAT3_': \n",
-    "                    instr = 'CSAT3'\n",
-    "                # write diagnostic column\n",
-    "                df = df.assign(**diag_dict[instr])\n",
-    "        return df  \n",
+    "        for site in self.site_info:\n",
+    "            rawfile_metadata = pd.DataFrame(\n",
+    "                data=np.zeros((self.site_info[site]['n_files_converted'], 8), dtype=str),\n",
+    "                columns=['Encoding', 'Station_name', 'Datalogger_model', 'Datalogger_serial_number', 'Datalogger_OS_version', 'Datalogger_program_name', 'Datalogger_program_signature', 'Table_name']\n",
+    "            )\n",
+    "            rawfile_metadata['File_name'] = self.site_info[site]['fns']\n",
+    "            rawfile_metadata['TIMESTAMP'] = self.site_info[site]['file_tss']\n",
+    "            rawfile_metadata['out_fn'] = np.NAN\n",
+    "            rawfile_metadata.set_index('TIMESTAMP', inplace=True)\n",
+    "\n",
+    "            self.site_info[site]['rawfile_metadata'] = rawfile_metadata.copy()\n",
+    "        \n",
+    "        return\n",
+    "    \n",
+    "    def summary_template(self):\n",
+    "        \"\"\"initialize the summary dataframe. Used by standardize_fast_files\"\"\"\n",
+    "        full_header = []\n",
+    "        for site in self.site_info:\n",
+    "            full_header += self.site_info[site]['final_header'][2:]\n",
+    "            \n",
+    "        summary_header = []\n",
+    "        for colname in full_header:\n",
+    "            summary_header.append(colname + '_Max')\n",
+    "            summary_header.append(colname + '_Min')\n",
+    "            summary_header.append(colname + '_Std')\n",
+    "            summary_header.append(colname + '_Mean')\n",
+    "            summary_header.append(colname + '_NANPct')\n",
+    "        summary_data = np.empty((len(self.desired_file_tss), len(summary_header)))\n",
+    "        return summary_data, summary_header     \n",
     "    \n",
     "    def get_timestamp_from_fn(self, fn):\n",
     "        \"\"\"given a raw, converted file, this will extract the timestamp given in its name. Files are expected to be of the format TOA5*Hz*_yyyy_mm_dd_hh_MM.dat\"\"\"\n",
@@ -229,51 +240,7 @@
     "            if len(self.site_info[site]['fns']):\n",
     "                print(self.site_info[site]['fns'][0].name)\n",
     "                print(\"...\")\n",
-    "                print(self.site_info[site]['fns'][-1].name)\n",
-    "      \n",
-    "    def metadata_template(self):\n",
-    "        \"\"\"create a blank template to store raw TOA5 file metadata in. This can be referenced later for debugging purposes\"\"\"\n",
-    "        \n",
-    "        for site in self.site_info:\n",
-    "            rawfile_metadata = pd.DataFrame(\n",
-    "                data=np.zeros((self.site_info[site]['n_files_converted'], 8), dtype=str),\n",
-    "                columns=['Encoding', 'Station_name', 'Datalogger_model', 'Datalogger_serial_number', 'Datalogger_OS_version', 'Datalogger_program_name', 'Datalogger_program_signature', 'Table_name']\n",
-    "            )\n",
-    "            rawfile_metadata['File_name'] = self.site_info[site]['fns']\n",
-    "            rawfile_metadata['TIMESTAMP'] = self.site_info[site]['file_tss']\n",
-    "            rawfile_metadata['out_fn'] = np.NAN\n",
-    "            rawfile_metadata.set_index('TIMESTAMP', inplace=True)\n",
-    "\n",
-    "            self.site_info[site]['rawfile_metadata'] = rawfile_metadata.copy()\n",
-    "        \n",
-    "        return\n",
-    "    \n",
-    "    def summary_template(self):\n",
-    "        \"\"\"initialize the summary dataframe. Used by standardize_fast_files\"\"\"\n",
-    "        full_header = []\n",
-    "        for site in self.site_info:\n",
-    "            full_header += self.site_info[site]['final_header'][2:]\n",
-    "            \n",
-    "        summary_header = []\n",
-    "        for colname in full_header:\n",
-    "            summary_header.append(colname + '_Max')\n",
-    "            summary_header.append(colname + '_Min')\n",
-    "            summary_header.append(colname + '_Std')\n",
-    "            summary_header.append(colname + '_Mean')\n",
-    "            summary_header.append(colname + '_NANPct')\n",
-    "        summary_data = np.empty((len(self.desired_file_tss), len(summary_header)))\n",
-    "        return summary_data, summary_header\n",
-    "        \n",
-    "    \n",
-    "    def get_fast_header_info(self):\n",
-    "        \"\"\"Site headers change over time. This retrieves the manually entered header data. Used for manual debugging\"\"\"\n",
-    "        \n",
-    "        for site in self.site_info:\n",
-    "            print(site)\n",
-    "            metadat = pd.read_excel(self.metadata_path, sheet_name = self.site_info[site]['header_sheet'])\n",
-    "            metadat['Date_yyyymmdd'] = pd.to_datetime(metadat['Date_yyyymmdd'], format='%Y%m%d')\n",
-    "            self.site_info[site]['header_metadat'] = metadat.copy()\n",
-    "        return\n",
+    "                print(self.site_info[site]['fns'][-1].name)   \n",
     "    \n",
     "    def make_empty(self, fts, site):\n",
     "            \"\"\"make an empty fast file to indicate missing data. Creates a dataframe with two entries in the given time period with the proper header, populated by nans.\n",
@@ -288,6 +255,16 @@
     "                    .reindex(columns=self.site_info[site]['final_header'], fill_value = np.nan)\n",
     "                    .set_index('TIMESTAMP'))\n",
     "            return emptydf\n",
+    "        \n",
+    "    def get_fast_header_info(self):\n",
+    "        \"\"\"Site headers change over time. This retrieves the manually entered header data. Used for manual debugging\"\"\"\n",
+    "        \n",
+    "        for site in self.site_info:\n",
+    "            print(site)\n",
+    "            metadat = pd.read_excel(self.metadata_path, sheet_name = self.site_info[site]['header_sheet'])\n",
+    "            metadat['Date_yyyymmdd'] = pd.to_datetime(metadat['Date_yyyymmdd'], format='%Y%m%d')\n",
+    "            self.site_info[site]['header_metadat'] = metadat.copy()\n",
+    "        return\n",
     "    \n",
     "    def reorder_headers(self, site, fts, df):\n",
     "        \"\"\"Data headers change over time as the site evolves. This method will rearrange the dataframe to fit into a standard-order header, given the site name and date. All such metadata is input manually. Refer to self.site_info[site]['header_metadat'] for help crafting these.\n",
@@ -381,21 +358,48 @@
     "        \n",
     "        return df\n",
     "    \n",
+    "    def process_diagnostics(self, df, site):\n",
+    "        \"\"\"search a dataframe for diagnostic columns and turn them into boolean flags\"\"\"\n",
+    "        # how to process diagnostic bits for each instrument\n",
+    "        diag_dict = {\n",
+    "            'CSAT3': {f'flag_CSAT3_{site}': lambda x: int(bool(x >> 12))},\n",
+    "            'CSAT3B': {f'flag_CSAT3B_{site}': lambda x: int(bool(x & 0b101011111))},\n",
+    "            'IRGA': {f'flag_IRGA_{site}': lambda x: int(bool(x))},\n",
+    "            'SON': {f'flag_SON_{site}' : lambda x: int(bool(x))}\n",
+    "        }\n",
+    "        \n",
+    "        # search all columns in dataframe\n",
+    "        for colname in df.columns:\n",
+    "            # find the instrument name\n",
+    "            instr = re.search(\"DIAG_CSAT3_|DIAG_CSAT3B|DIAG_IRGA|DIAG_SON\", colname)\n",
+    "            if instr: \n",
+    "                instr = instr[0][5:]\n",
+    "                if instr == 'CSAT3_': \n",
+    "                    instr = 'CSAT3'\n",
+    "                # write diagnostic column\n",
+    "                df = df.assign(**diag_dict[instr])\n",
+    "        return df  \n",
+    "    \n",
     "    def process_file(self, fn, site, ts):\n",
     "        \"\"\"read in a single raw file and return a formatted version\"\"\"\n",
     "        # read in the file. Rows 0, 2, and 3 contain boring metadata. After rows 0, 2, 3 are removed, the new row 0 is the true header\n",
     "        \n",
     "        self.tlog.click('in')\n",
-    "        rawdat = csv.read_csv(\n",
-    "            fn, \n",
-    "            parse_options=csv.ParseOptions(delimiter=','),\n",
-    "            convert_options=csv.ConvertOptions(null_values=['NAN', '-4400906', '-9999']),\n",
-    "            read_options=csv.ReadOptions(use_threads=True, skip_rows=1, skip_rows_after_names=2)\n",
-    "        ).to_pandas(use_threads=True)\n",
+    "        \n",
+    "        rawdat = (\n",
+    "            csv.read_csv(\n",
+    "                fn, \n",
+    "                parse_options=csv.ParseOptions(delimiter=','),\n",
+    "                convert_options=csv.ConvertOptions(null_values=['NAN', '-4400906', '-9999']),\n",
+    "                read_options=csv.ReadOptions(use_threads=True, skip_rows=1, skip_rows_after_names=2)\n",
+    "            )\n",
+    "            .add_column(0, 'key', [np.arange()])\n",
+    "        )\n",
     "        \n",
     "#         rawdat = pd.read_csv(fn, sep=',', header=[0], skiprows=[0, 2, 3], na_values = ['NAN', '-4400906', '-9999', '-7999'])\n",
     "        self.tlog.click('in')\n",
     "        \n",
+    "        rawdat = rawdat.add_column()\n",
     "        rawdat['TIMESTAMP'] = pd.to_datetime(rawdat['TIMESTAMP'], format='%Y-%m-%d %H:%M:%S.%f')\n",
     "        \n",
     "        # add diagnostic flags\n",
